<resources>
    <string name="app_name">Diana Cosmetics</string>
    <string name="lblAddProduct">Add Product</string>
    <string name="txtProductName">Product Name</string>
    <string name="txtPrice">Price</string>
    <string name="txtQuantitiy">Quantitiy</string>
    <string name="txtDiscription">Discription</string>
    <string name="btnAddProduct">Add Photo</string>
    <string name="btnSave">SAVE</string>
    <string name="lblCategory">Category</string>
    <string name="lblCategory1">Category 1</string>
    <string name="btnEdit1">EDIT</string>
    <string name="btnDelete1">DELETE</string>
    <string name="lblCategory2">Category 2</string>
    <string name="btnEdit2">EDIT</string>
    <string name="btnDelete2">DELETE</string>
    <string name="lblCategory3">Category 3</string>
    <string name="btnEdit3">EDIT</string>
    <string name="btnDelete3">DELETE</string>
    <string name="lblCategory4">Category 4</string>
    <string name="btnEdit4">EDIT</string>
    <string name="btnDelete4">DELETE</string>
    <string name="lblEditProduct">Edit Product</string>
    <string name="lblItem">SHOP</string>
    <string name="lblItem1">Item 1</string>
    <string name="lblItem2">Item 2</string>
    <string name="lblItem3">Item 3</string>
    <string name="lblItem4">Item 4</string>
    <string name="lblPrice">Price</string>
    <string name="lblPrice1">Price</string>
    <string name="lblPrice2">Price</string>
    <string name="lblPrice3">Price</string>
    <string name="btnAddCart">ADD CART</string>
    <string name="btnAddCart1">ADD CART</string>
    <string name="btnAddCart2">ADD CART</string>
    <string name="btnAddCart3">ADD CART</string>
    <string name="btnHome">btnHome</string>
    <string name="btnPayment">btnPayment</string>
    <string name="btnInquary">btnInquary</string>
    <string name="btnProfile">btnProfile</string>
    <string name="btnCart">btnCart</string>
    <string name="btnJoinNow">Join Now</string>
    <string name="lbl_add_product">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- viraj-->
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="user_list">Enquires List</string>
    <string name="update">Update</string>
    <string name="enterName">Enter your Email</string>
    <string name="enterMessage">Enter your message</string>
    <string name="e_mail">E-mail:</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="reply">Reply</string>
    <string name="email">Email:</string>
    <string name="message">Message:</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
</resources>